# JaynesLineClassifier

./: README.md  environment.yml  mkdocs.yml  pyproject.toml
configs/priors/: prior_fake.yaml  prior_lae.yaml  prior_oii.yaml
docs/: index.md
docs/algorithms/: overview.md
docs/api/: index.md
docs/citation/: citation.md
docs/community/: code_of_conduct.md  contributing.md
docs/data-products/: overview.md
docs/development/: dev-quickstart.md
docs/getting-started/: installation.md  quickstart.md
docs/release_info/: changelog.md
docs/user-guide/: cli.md  configuration.md  examples.md  prior_records.md  refactor_architecture.md
scripts/: detection_simulation.py  plot_lae_completeness.py  run_parity_scenarios.py
src/jlc/: types.py
src/jlc/cli/: main.py
src/jlc/core/: __init__.py  population_helpers.py
src/jlc/cosmology/: lookup.py
src/jlc/engine/: engine.py  flux_grid.py
src/jlc/engine_noise/: __init__.py  noise_cube_cli.py  noise_cube_model.py  noise_cube_volume.py
src/jlc/labels/: base.py  fake.py  lae.py  oii.py  registry.py
src/jlc/measurements/: __init__.py  base.py  flux.py  (+1 more)
tests/: test_completeness_providers.py  test_engine_global_priors.py  test_engine_modes.py  test_engine_prior_application.py  test_flux_grid.py  test_kernel.py  test_kernel_profiles.py  test_lf_regression.py  test_measurements_loader.py  test_noise_cube.py  test_noise_histogram.py  test_orchestrator_pipeline.py  test_population_helpers.py  test_rate_integrand.py  test_sanity.py  test_selection_model.py  test_sn_selection.py  test_wavelength_measurement.py
(+24 files in other folders)
