[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jlc"
version = "0.0.1"
description = "Jaynesian Line Classifier (minimal skeleton)"
authors = [{ name = "JaynesLineClassifier Devs" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "astropy>=5",
  "matplotlib>=3.7",
]

[project.scripts]
jlc = "jlc.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
